--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,118 @@
 		//= template/aside.html
 
 		<main class="main">
+			<div class="main__slider_wr">
+				<!-- <button class="arrow arrow--prev"></button>
+				<button class="arrow arrow--next"></button> -->
+				<div class="main__slider">
+					<img src="img/slider_img.jpg" alt="Slider Image">
+				</div>
+			</div>
+
+			<div class="simple_slider_wr">
+				<div class="slider__top">
+					<h2 class="block__title">Популярное</h2>
+
+					<div class="buttons_wr">
+						<button class="arrow arrow__prev">
+							<svg width="9" height="16" viewBox="0 0 9 16" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="M7.74316 1.79834L1.54146 8.00005L7.74316 14.2018" stroke="#9F9F9F"
+									stroke-width="2" stroke-linecap="round" />
+							</svg>
+						</button>
+
+						<button class="arrow arrow__next">
+							<svg width="10" height="16" viewBox="0 0 10 16" fill="none"
+								xmlns="http://www.w3.org/2000/svg">
+								<path d="M1.65527 14.2017L7.85698 7.99995L1.65527 1.79825" stroke="#9F9F9F"
+									stroke-width="2" stroke-linecap="round" />
+							</svg>
+						</button>
+					</div>
+
+				</div>
+
+
+				<div class="simple_slider">
+					<div class="slider__item">
+						<div class="slider__code_wr">
+							<span class="slider__code"></span>
+							<a href="#" class="youtube_link">
+								<svg width="20" height="14" viewBox="0 0 20 14" fill="none"
+									xmlns="http://www.w3.org/2000/svg">
+									<path
+										d="M19.1177 1.2018C18.3996 0.348193 17.0739 0 14.5419 0H5.35099C2.7611 0 1.41286 0.370654 0.697478 1.27945C0 2.16553 0 3.47109 0 5.27803V8.72204C0 12.2226 0.827554 14 5.35099 14H14.542C16.7377 14 17.9544 13.6927 18.7415 12.9394C19.5487 12.1669 19.8931 10.9057 19.8931 8.72204V5.27803C19.8931 3.37246 19.8391 2.05919 19.1177 1.2018ZM12.7714 7.47551L8.59787 9.65676C8.50456 9.70553 8.40253 9.72972 8.30062 9.72972C8.18524 9.72972 8.07012 9.69866 7.96815 9.63693C7.77615 9.52058 7.65891 9.31248 7.65891 9.08801V4.7395C7.65891 4.51541 7.77583 4.3075 7.96745 4.19109C8.15913 4.07469 8.39752 4.06673 8.59639 4.17004L12.77 6.33724C12.9823 6.44748 13.1157 6.66669 13.116 6.90586C13.1162 7.14522 12.9835 7.36475 12.7714 7.47551Z"
+										fill="#C2C2C2" />
+								</svg>
+							</a>
+						</div>
+
+						<div class="img_wr">
+							<img src="img/amino_big_1.png" alt="slider Image">
+						</div>
+
+						<span class="slider__name">Mega Amino Fastus Chock 3200 — 500 таблеток...</span>
+
+						<div class="slider__review_wr">
+							<div class="rating">
+								<div class="star">
+									<svg width="12" height="11" viewBox="0 0 12 11" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.04024 0.181185L7.50748 3.65389L11.2638 3.97659C11.5243 3.99909 11.6303 4.32415 11.4326 4.49527L8.58334 6.96376L9.43716 10.636C9.49637 10.8912 9.21986 11.0919 8.99604 10.9563L5.76788 9.00949L2.53971 10.9563C2.3153 11.0913 2.03938 10.8906 2.09859 10.636L2.95241 6.96376L0.102601 4.49468C-0.0951623 4.32356 0.0102326 3.99849 0.271352 3.97599L4.02767 3.6533L5.49491 0.181185C5.59676 -0.0603949 5.9384 -0.0603949 6.04024 0.181185Z"
+											fill="#DCBA0C" />
+									</svg>
+								</div>
+								<div class="star">
+									<svg width="12" height="11" viewBox="0 0 12 11" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.04024 0.181185L7.50748 3.65389L11.2638 3.97659C11.5243 3.99909 11.6303 4.32415 11.4326 4.49527L8.58334 6.96376L9.43716 10.636C9.49637 10.8912 9.21986 11.0919 8.99604 10.9563L5.76788 9.00949L2.53971 10.9563C2.3153 11.0913 2.03938 10.8906 2.09859 10.636L2.95241 6.96376L0.102601 4.49468C-0.0951623 4.32356 0.0102326 3.99849 0.271352 3.97599L4.02767 3.6533L5.49491 0.181185C5.59676 -0.0603949 5.9384 -0.0603949 6.04024 0.181185Z"
+											fill="#DCBA0C" />
+									</svg>
+								</div>
+								<div class="star">
+									<svg width="12" height="11" viewBox="0 0 12 11" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.04024 0.181185L7.50748 3.65389L11.2638 3.97659C11.5243 3.99909 11.6303 4.32415 11.4326 4.49527L8.58334 6.96376L9.43716 10.636C9.49637 10.8912 9.21986 11.0919 8.99604 10.9563L5.76788 9.00949L2.53971 10.9563C2.3153 11.0913 2.03938 10.8906 2.09859 10.636L2.95241 6.96376L0.102601 4.49468C-0.0951623 4.32356 0.0102326 3.99849 0.271352 3.97599L4.02767 3.6533L5.49491 0.181185C5.59676 -0.0603949 5.9384 -0.0603949 6.04024 0.181185Z"
+											fill="#DCBA0C" />
+									</svg>
+								</div>
+								<div class="star">
+									<svg width="12" height="11" viewBox="0 0 12 11" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.04024 0.181185L7.50748 3.65389L11.2638 3.97659C11.5243 3.99909 11.6303 4.32415 11.4326 4.49527L8.58334 6.96376L9.43716 10.636C9.49637 10.8912 9.21986 11.0919 8.99604 10.9563L5.76788 9.00949L2.53971 10.9563C2.3153 11.0913 2.03938 10.8906 2.09859 10.636L2.95241 6.96376L0.102601 4.49468C-0.0951623 4.32356 0.0102326 3.99849 0.271352 3.97599L4.02767 3.6533L5.49491 0.181185C5.59676 -0.0603949 5.9384 -0.0603949 6.04024 0.181185Z"
+											fill="#DCBA0C" />
+									</svg>
+								</div>
+								<div class="star">
+									<svg width="12" height="11" viewBox="0 0 12 11" fill="none"
+										xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M6.04024 0.181185L7.50748 3.65389L11.2638 3.97659C11.5243 3.99909 11.6303 4.32415 11.4326 4.49527L8.58334 6.96376L9.43716 10.636C9.49637 10.8912 9.21986 11.0919 8.99604 10.9563L5.76788 9.00949L2.53971 10.9563C2.3153 11.0913 2.03938 10.8906 2.09859 10.636L2.95241 6.96376L0.102601 4.49468C-0.0951623 4.32356 0.0102326 3.99849 0.271352 3.97599L4.02767 3.6533L5.49491 0.181185C5.59676 -0.0603949 5.9384 -0.0603949 6.04024 0.181185Z"
+											fill="#DCBA0C" />
+									</svg>
+								</div>
+							</div>
+						</div>
+
+						<div class="select_wr">
+							<select class="select">
+								<option value="Банан" class="select__option">Банан</option>
+								<option value="Клубника" class="select__option">Клубника</option>
+								<option value="Ванильный крем" class="select__option">Ванильный крем</option>
+								<option value="Перец" class="select__option">Перец</option>
+								<option value="Манго" class="select__option">Манго</option>
+								<option value="Шоколадный торт" class="select__option">Шоколадный торт</option>
+								<option value="Мандарин" class="select__option">Мандарин</option>
+							</select>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		</main>
 	</div>
